* ostk - Search Overstock.com for items (from Brent Beardsley)
* tinyurl - tinyurl.com is a link-shortening redirector (from Brent Beardsley) 

Modified Searches

* ascii - added link to www asciitable com so an ascii table will pop up if no parameters are specified
* multi - added ability to have multiple searches with different arguments and allow commas in arguments

Enhancements

* Added InstallationDirectory property to Launcher
* Added FindSubMenu, FindMenuItem, GetMenuItemCount, InsertMenuItem, InsertSeparator, InsertSubMenu functions to MenuBuilder

Bug Fixes

* Fix for tooltips problem on scrolling menus (bug 617639)  (DQSDTools.DLL changes, version.js NOT changed to force upgrade)
* Remove HTML tags from menu item search names
* Stop indicating as '[local]' aliases defined in aliases.txt
* Sub categories and searches are now sorted properly in the help menu


-- What's new for 3.1.4 (October 3, 2002)

New Searches

* smlnk - smLNK is a link-shortening redirector where the URLs are as short as possible (from Jonathon Marshall)
* cjfr - Get the conjugation for a french verb
* synfr - get synonyms for a french word
* webpoll - displays a graph illustrating the timings of the objects on a web page (from Dean Wilson)
* dg - GoDaddy DynaGen Domain Search; finds intelligent variations of domain names given a word (from Glenn Carr)
* mysimon - MySimon price comparison engine
* dhl - Track DHL packages
* usps - Track USPS packages
* abex - Track Airborne Express packages
* wpfr - Get an address from a name in France
* msda - Microsoft Discussion Archive search
* shack - Search the shacknews.com comments database (from Wolfgang Deutsch)
* dps - Search for the best DVD prices from several online merchants (from Steven J. Heil)
* pgrab - Price searches, product info, vendor ratings & reviews. (from Andrew D. Myers)
* httpd - Netcraft's "Whats that site running" database/web server information
* archi - Archive.org's Way Back Machine.